fixed sizing problem on tablet and phone device

--- a/portf-website/src/components/aboutSection/about.css
+++ b/portf-website/src/components/aboutSection/about.css
@@ -65,6 +65,9 @@
 }
 
 @media screen and (max-width:1024px){
+    #about{
+        /* height: 80vh; */
+    }
    .about_container{
        grid-template-columns: 1fr;
        gap:0;
@@ -75,6 +78,7 @@
 }
 
 @media screen and (max-width:600px){
+    
     .about_me{
         width:65%;
         margin: 0 auto 3rem;
