--- a/portf-website/src/components/contactSection/contact.css
+++ b/portf-website/src/components/contactSection/contact.css
@@ -1,3 +1,7 @@
+
+#contact{
+    padding-bottom: 10%;
+}
 .container.contact_container{
     width: 58%;
     display: grid;
