--- a/portf-website/src/components/headerSection/header.css
+++ b/portf-website/src/components/headerSection/header.css
@@ -77,7 +77,7 @@ header{
 @media screen and (max-width: 1024px){
 
     header{
-        height: 70vh;
+        /* height: 80vh; */
     }
 }
 
@@ -85,7 +85,7 @@ header{
 
 @media screen and (max-width: 600px){
     header{
-        height: 100vh;
+        /* height: 110vh; */
     }
     .header_socials{
         display: none;
